added school campus

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   </head>
   <body>
     <div class="container">
+      <!-- NavBar Section -->
       <header>
         <nav>
           <a href=""><img class="logo" src="images/logo.JPG" alt="logo" /></a>
-          <div>
+          <div class="nav">
             <ul id="nav-links">
               <li><a href="">Home</a></li>
               <li><a href="">Education</a></li>
@@ -37,7 +38,6 @@
       <!-- Hero Section -->
 
       <div class="hero">
-        <!-- <img id="hero-image" src="images/school.jpg" alt="school" /> -->
         <div class="hero-text">
           <h1
             class="school-name xl"
@@ -91,9 +91,46 @@
             </p>
             <p class="parent-name">Parent 3</p>
           </div>
-          </div>
         </div>
       </div>
+
+      <!-- School Campus Section -->
+
+      <div class="campus">
+        <div class="lead my-4">
+          <p>School Campus and Activities</p>
+        </div>
+        <div class="images">
+            <img src="images/kids 3.jpeg" alt="" class="activities">
+           
+            <img src="images/kids 4.jpeg" alt="" class="activities">
+            <img src="images/kids 6.jpg" alt="" class="activities">
+            <img src="images/kids 5.jpeg" alt="" class="activities">
+        </div>
+      </div>
+
+      <!-- Footer -->
+    <!-- <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>TeeSoloz</h1>
+                <p>Copyright &copy;2021</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
+    </footer> -->
     </div>
   </body>
 </html>
