updated the sectional headings with permanent marker font

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;600&family=Poppins:wght@300;500;600&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Manrope:wght@300&family=Montserrat:wght@100;200;300&family=Permanent+Marker&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="utilities.css" />
     <title>NobleGate schools</title>
@@ -61,7 +57,7 @@
 
       <div class="testimonial">
         <div class="testimonial-heading">
-          <p>What are people saying about us?</p>
+          <p class="lead">What are people saying about us?</p>
         </div>
         <div class="testimonies">
           <div class="card">
@@ -104,7 +100,7 @@
             <img src="images/kids 3.jpeg" alt="" class="activities">
            
             <img src="images/kids 4.jpeg" alt="" class="activities">
-            <img src="images/kids 6.jpg" alt="" class="activities">
+            <img src="images/kids 1.jpg" alt="" class="activities">
             <img src="images/kids 5.jpeg" alt="" class="activities">
         </div>
       </div>
